finishing nanofibers part

--- a/03-methods.tex
+++ b/03-methods.tex
@@ -11,6 +11,8 @@ Polydimethylsiloxane (PDMS) was prepared by the thorough mixing of two liquid co
 
 All chemicals were purchased from Wako Chemicals Inc.,Japan.
 \subsubsection{Electrospinning of PCL fibers}
-The prepared solution of PCL polymer was electrospun using Nanon electrospinning setup(MECC CO.,LTD) with 8kV between needle and grounded collector. The solution was ejected through 20 gauge blut-tip needle at feed rate of 1 ml/h. Fibers were deposited directly during the process of electrospining on either PDMS sheets or 22mm diameter cover glass pieces(Corning Corp.), which were placed on the surface of grounded stationary collector, representing a huge metal plate.    
+The prepared solution of PCL polymer was electrospun using Nanon electrospinning setup(MECC CO.,LTD) with 8kV between needle and grounded collector. The solution was ejected through 20 gauge blut-tip needle at feed rate of 1 ml/h. Forming fibers were deposited directly during the process of electrospining on either PDMS sheets or 22mm diameter cover glass pieces(Corning Corp.), which were placed on the surface of grounded stationary collector, representing a huge metal plate.    
 \subsubsection{Creating of randomly orientated nanofibrous substrates }
-In order to obtain samples of different nanofibers positioning density we varied spraying time in the range of 10 to 60 seconds. Thus we produced 2-D fibrous meshes with pore size of 5-500 um. 
+In order to obtain samples of different nanofibers positioning density we varied spraying time in the range of 10 to 60 seconds. Thus, we produced 2-D fibrous meshes with pore size of 5-500 um. 
+It was important for our study to make control specimens, which were not covered by polymer fibers. On  the other side we had to compare fuctional and morphological characteristics of this substrates.    
+                                                 
