beginning of mappinng section

--- a/03-methods.tex
+++ b/03-methods.tex
@@ -11,8 +11,11 @@ Polydimethylsiloxane (PDMS) was prepared by the thorough mixing of two liquid co
 
 All chemicals were purchased from Wako Chemicals Inc.,Japan.
 \subsubsection{Electrospinning of PCL fibers}
-The prepared solution of PCL polymer was electrospun using Nanon electrospinning setup(MECC CO.,LTD) with 8kV between needle and grounded collector. The solution was ejected through 20 gauge blut-tip needle at feed rate of 1 ml/h. Forming fibers were deposited directly during the process of electrospining on either PDMS sheets or 22mm diameter cover glass pieces(Corning Corp.), which were placed on the surface of grounded stationary collector, representing a huge metal plate.    
-\subsubsection{Creating of randomly orientated nanofibrous substrates }
+The prepared solution of PCL polymer was electrospun using Nanon electrospinning setup(MECC CO.,LTD) with applying of 8kV between needle and grounded collector. The solution was ejected through 20 gauge blut-tip needle at feed rate of 1 ml/h. Forming fibers were deposited directly during the process of electrospining on either PDMS sheets or 22mm diameter cover glass pieces(Corning Corp.), which were placed on the surface of grounded stationary collector, representing a huge metal plate.    
+\subsubsection{Creating of randomly oriented nanofibrous substrates}
 In order to obtain samples of different nanofibers positioning density we varied spraying time in the range of 10 to 60 seconds. Thus, we produced 2-D fibrous meshes with pore size of 5-500 um. 
-It was important for our study to make control specimens, which were not covered by polymer fibers. On  the other side we had to compare fuctional and morphological characteristics of this substrates.    
-                                                 
+It was important for our study to make control specimens, which were not covered by polymer fibers. On  the other hand we had to compare fuctional and morphological characteristics of this substrates. To fullfill all the requirements we produced sample half covered with fibrous mesh. For this purpose we gently removed nanofibers from the half of the specimen using adhesive tape. After completing the substrates fabrication we coated our samples with fibronectin(0.16 mg/ml) for better cells adhesion.
+\subsection{Cell seeding and cultivation}
+Cardiac cell isolation, seeding and cultivation performed according to Worthington protocol (http://www.worthingtonbiochem.com/NCIS/default.html ). Cardiac cells were isolated from the ventricles of 1-3 day old neonatal Wistar rats. 
+\subsection{Optical mapping}
+Optical mapping was done after 4-5 days of cell culture cultivation. In order to monitor activity and detection of excitation wave propagation, the cellswere loaded with Ca\superscript{2+} Fluo-4-AM indicator(Invitogen, USA) in Tyrode solution for 40 minutes. 
