--- a/main.tex
+++ b/main.tex
@@ -1,9 +1,9 @@
- \documentclass[12pt,twocolumn]{article}
+ \documentclass[12pt, twocolumn]{article}
 %\us	epackage[unicode]{hyperref}
 \usepackage{mathtext}
 \usepackage[T2A]{fontenc}
 \usepackage[utf8]{inputenc}
-\usepackage[russian]{babel}
+
 
 
 
@@ -34,6 +34,6 @@
 \newpage
 %%%
 \bibliographystyle{ieeetr}
-%\bibliography{/home/lg1/Documents/citation/library}
+\bibliography{C:/Users/Sony/Documents/library}
 
 \end{document}
