optical mapping section complete

--- a/03-methods.tex
+++ b/03-methods.tex
@@ -17,5 +17,8 @@ In order to obtain samples of different nanofibers positioning density we varied
 It was important for our study to make control specimens, which were not covered by polymer fibers. On  the other hand we had to compare fuctional and morphological characteristics of this substrates. To fullfill all the requirements we produced sample half covered with fibrous mesh. For this purpose we gently removed nanofibers from the half of the specimen using adhesive tape. After completing the substrates fabrication we coated our samples with fibronectin(0.16 mg/ml) for better cells adhesion.
 \subsection{Cell seeding and cultivation}
 Cardiac cell isolation, seeding and cultivation performed according to Worthington protocol (http://www.worthingtonbiochem.com/NCIS/default.html ). Cardiac cells were isolated from the ventricles of 1-3 day old neonatal Wistar rats. 
-\subsection{Optical mapping}
-Optical mapping was done after 4-5 days of cell culture cultivation. In order to monitor activity and detection of excitation wave propagation, the cellswere loaded with Ca\superscript{2+} Fluo-4-AM indicator(Invitogen, USA) in Tyrode solution for 40 minutes. 
+\subsection{Staining}
+\subsubsection{Optical mapping}
+Optical mapping was done after 4-5 days of cell culture cultivation. In order to monitor activity and detection of excitation wave propagation, the cells were loaded with Ca$^{2+}$ Fluo-4-AM indicator(Invitogen, USA) in Tyrode solution for 40 minutes. After completion of staining procedure we exchanged the Tyrode solution to the fresh one. For the capturing of excitation cardiac waves we utilized Olympus MVX-10 Macro-View fluorescent microscope equipped with high-speed Andor EM-CCD Camera 897-U. Videos were acquired at 68 fps. Before cardiac activity recording covered with nanofibers and non-covered halves of the sample separated from each other by sharp blade cut. In terms of electrical conductivity of excitable tissue these two parts of the specimen didn't have any interactions. To compare the conduction properties of resulting two sections we mounted stimulation electrode(500mm platinum wire) at the cutting-line area 0.5 mm above the surface with a round shape platinum wire ground electrode. As a result, these two separated areas were simultaneously(synchronously) stimulated.
+\subsubsection{$\alpha$-actin staining}
+One of the major goal of this study was cardiac determination of morphologically orientated patterns at influenced by nanofibres cell culture. For this purpose we stained our samples with Alexa Fluor 488 Phaloidinin Conjugate according to the descibed protocols\cite{Orlova2011}.   
