data anal opt map complete

--- a/03-methods.tex
+++ b/03-methods.tex
@@ -21,4 +21,8 @@ Cardiac cell isolation, seeding and cultivation performed according to Worthingt
 \subsubsection{Optical mapping}
 Optical mapping was done after 4-5 days of cell culture cultivation. In order to monitor activity and detection of excitation wave propagation, the cells were loaded with Ca$^{2+}$ Fluo-4-AM indicator(Invitogen, USA) in Tyrode solution for 40 minutes. After completion of staining procedure we exchanged the Tyrode solution to the fresh one. For the capturing of excitation cardiac waves we utilized Olympus MVX-10 Macro-View fluorescent microscope equipped with high-speed Andor EM-CCD Camera 897-U. Videos were acquired at 68 fps. Before cardiac activity recording covered with nanofibers and non-covered halves of the sample separated from each other by sharp blade cut. In terms of electrical conductivity of excitable tissue these two parts of the specimen didn't have any interactions. To compare the conduction properties of resulting two sections we mounted stimulation electrode(500mm platinum wire) at the cutting-line area 0.5 mm above the surface with a round shape platinum wire ground electrode. As a result, these two separated areas were simultaneously(synchronously) stimulated.
 \subsubsection{$\alpha$-actin staining}
-One of the major goal of this study was cardiac determination of morphologically orientated patterns at influenced by nanofibres cell culture. For this purpose we stained our samples with Alexa Fluor 488 Phaloidinin Conjugate according to the descibed protocols\cite{Orlova2011}.   
+One of the major goal of this study was cardiac determination of morphologically orientated patterns at influenced by nanofibres cell culture. For this purpose we stained our samples with Alexa Fluor 488 Phaloidinin Conjugate according to the descibed protocol\cite{Orlova2011}. The sampled were imaged using Carl Zeiss LSM 710 confocal microscope. 
+\subsection{Data Analysis}
+\subsubsection{Optical mapping data analysis}
+Recorded optical mapping videos were filtered using temporal 5 iteration 8-term Daubechies wavelet low-pass shrinkage filter and spatial smoothing three level Haar wavelet filter. Both filtering algorithms were implemented in Wolfram Mathematica software. After removing noise procedure built pseudocardiograms for each of the two electrically isolated parts of the sample for subsequent comparison. 
+\subsubsection{Analysis of morphologically patterned cardiac monolayer}  
