data analysis in progress

--- a/03-methods.tex
+++ b/03-methods.tex
@@ -16,7 +16,7 @@ The prepared solution of PCL polymer was electrospun using Nanon electrospinning
 In order to obtain samples of different nanofibers positioning density we varied spraying time in the range of 10 to 60 seconds. Thus, we produced 2-D fibrous meshes with pore size of 5-500 um. 
 It was important for our study to make control specimens, which were not covered by polymer fibers. On  the other hand we had to compare fuctional and morphological characteristics of this substrates. To fullfill all the requirements we produced sample half covered with fibrous mesh. For this purpose we gently removed nanofibers from the half of the specimen using adhesive tape. After completing the substrates fabrication we coated our samples with fibronectin(0.16 mg/ml) for better cells adhesion.
 \subsection{Cell seeding and cultivation}
-Cardiac cell isolation, seeding and cultivation performed according to Worthington protocol (http://www.worthingtonbiochem.com/NCIS/default.html ). Cardiac cells were isolated from the ventricles of 1-3 day old neonatal Wistar rats. 
+Cardiac cell isolation, seeding and cultivation performed according to Worthington protocol (http://www.worthingtonbiochem.com/$\newline$NCIS/default.html ). Cardiac cells were isolated from the ventricles of 1-3 day old neonatal Wistar rats. 
 \subsection{Staining}
 \subsubsection{Optical mapping}
 Optical mapping was done after 4-5 days of cell culture cultivation. In order to monitor activity and detection of excitation wave propagation, the cells were loaded with Ca$^{2+}$ Fluo-4-AM indicator(Invitogen, USA) in Tyrode solution for 40 minutes. After completion of staining procedure we exchanged the Tyrode solution to the fresh one. For the capturing of excitation cardiac waves we utilized Olympus MVX-10 Macro-View fluorescent microscope equipped with high-speed Andor EM-CCD Camera 897-U. Videos were acquired at 68 fps. Before cardiac activity recording covered with nanofibers and non-covered halves of the sample separated from each other by sharp blade cut. In terms of electrical conductivity of excitable tissue these two parts of the specimen didn't have any interactions. To compare the conduction properties of resulting two sections we mounted stimulation electrode(500mm platinum wire) at the cutting-line area 0.5 mm above the surface with a round shape platinum wire ground electrode. As a result, these two separated areas were simultaneously(synchronously) stimulated.
@@ -24,5 +24,7 @@ Optical mapping was done after 4-5 days of cell culture cultivation. In order to
 One of the major goal of this study was cardiac determination of morphologically orientated patterns at influenced by nanofibres cell culture. For this purpose we stained our samples with Alexa Fluor 488 Phaloidinin Conjugate according to the descibed protocol\cite{Orlova2011}. The sampled were imaged using Carl Zeiss LSM 710 confocal microscope. 
 \subsection{Data Analysis}
 \subsubsection{Optical mapping data analysis}
-Recorded optical mapping videos were filtered using temporal 5 iteration 8-term Daubechies wavelet low-pass shrinkage filter and spatial smoothing three level Haar wavelet filter. Both filtering algorithms were implemented in Wolfram Mathematica software. After removing noise procedure built pseudocardiograms for each of the two electrically isolated parts of the sample for subsequent comparison. 
-\subsubsection{Analysis of morphologically patterned cardiac monolayer}  
+Recorded optical mapping videos were filtered using temporal 5 iteration 8-term Daubechies wavelet low-pass shrinkage filter and spatial smoothing three level Haar wavelet filter. Both filtering algorithms were implemented in Wolfram Mathematica software. After removing noise procedure we built pseudocardiograms for each of the two electrically isolated parts of the sample for subsequent comparison. 
+\subsubsection{Determination of average domain size in patterned cardiac monolayer}  
+To estimate size of orientated patterns on the $\alpha$-actin images of cell culture we used ImageJ software. Firstly, we calculated local orientation maps for each gray-scale $\alpha$-actin image using OrientationJ plugin thoroughly described in\cite{Bouten2011}. These program calculates local orientation tensor for each pixel of gray-scale image. Taking into accout that averige cardiac cell has an elongated shape we chose the size of square window being equal to relative size of cell at image in pixel units. This estimation is reasonable in consideration of the cell as a single unit with orientated in one direction actin fibers. Also, this assumption is a crucial point to the proper estimation of local directionality at the image because the square window size directly influences on the calculation of inner products of gradient functions. Hence it directly affects the determination of orientation tensor components and directionality. In other words square size parameter represents the measure of influence of neighbourhood pixels on the results.       As a result we achieved    
+Then we implemented basic maching learning k-means algorithms in 
