--- a/03-methods.tex
+++ b/03-methods.tex
@@ -26,5 +26,5 @@ One of the major goal of this study was cardiac determination of morphologically
 \subsubsection{Optical mapping data analysis}
 Recorded optical mapping videos were filtered using temporal 5 iteration 8-term Daubechies wavelet low-pass shrinkage filter and spatial smoothing three level Haar wavelet filter. Both filtering algorithms were implemented in Wolfram Mathematica software. After removing noise procedure we built pseudocardiograms for each of the two electrically isolated parts of the sample for subsequent comparison. 
 \subsubsection{Determination of average domain size in patterned cardiac monolayer}  
-To estimate size of orientated patterns on the $\alpha$-actin images of cell culture we used ImageJ software. Firstly, we calculated local orientation maps for each gray-scale $\alpha$-actin image using OrientationJ plugin thoroughly described in\cite{Bouten2011}. These program calculates local orientation tensor for each pixel of gray-scale image. Taking into accout that averige cardiac cell has an elongated shape we chose the size of square window being equal to relative size of cell at image in pixel units. This estimation is reasonable in consideration of the cell as a single unit with orientated in one direction actin fibers. Also, this assumption is a crucial point to the proper estimation of local directionality at the image because the square window size directly influences on the calculation of inner products of gradient functions. Hence it directly affects the determination of orientation tensor components and directionality. In other words square size parameter represents the measure of influence of neighbourhood pixels on the results.       As a result we achieved    
+To estimate size of orientated patterns on the $\alpha$-actin images of cell culture we used ImageJ software. Firstly, we calculated local orientation maps for each gray-scale $\alpha$-actin image using OrientationJ plugin thoroughly described in\cite{Bouten2011}. These program calculates local orientation tensor for each pixel of gray-scale image. Taking into account the fact, that averige cardiac cell has an elongated shape and can be considered as single unit with actin filaments orientated in one direction, we chose the size of square window being equal to relative size of cell at image in pixel units. Also, this assumption is a crucial point to the proper estimation of local directionality at the image because the square window size directly influences on the calculation of inner products of gradient functions. Hence it directly affects the determination of orientation tensor components and directionality. In other words the square size parameter represents the measure of influence of neighbourhood pixels on the results.    As a result we achieved gray-scale image each pixel of which had the value of angle of local directionality at the corresponding pixel of source image.       
 Then we implemented basic maching learning k-means algorithms in 
