--- a/03-methods.tex
+++ b/03-methods.tex
@@ -14,7 +14,7 @@ All chemicals were purchased from Wako Chemicals Inc.,Japan.
 The prepared solution of PCL polymer was electrospun using Nanon electrospinning setup(MECC CO.,LTD) with applying of 8kV between needle and grounded collector. The solution was ejected through 20 gauge blut-tip needle at feed rate of 1 ml/h. Forming fibers were deposited directly during the process of electrospining on either PDMS sheets or 22mm diameter cover glass pieces(Corning Corp.), which were placed on the surface of grounded stationary collector, representing a huge metal plate.    
 \subsubsection{Creating of randomly oriented nanofibrous substrates}
 In order to obtain samples of different nanofibers positioning density we varied spraying time in the range of 10 to 60 seconds. Thus, we produced 2-D fibrous meshes with pore size of 5-500 um. 
-It was important for our study to make control specimens, which were not covered by polymer fibers. On  the other hand we had to compare fuctional and morphological characteristics of this substrates. To fullfill all the requirements we produced sample half covered with fibrous mesh. For this purpose we gently removed nanofibers from the half of the specimen using adhesive tape. After completing the substrates fabrication we coated our samples with fibronectin(0.16 mg/ml) for better cells adhesion.
+It was important for our study to make control specimens, which were not covered by polymer fibers. On  the other hand we had to compare fuctional and morphological characteristics of this substrates. To fulfill all the requirements we produced sample half covered with fibrous mesh. For this purpose we gently removed nanofibers from the half of the specimen using adhesive tape. After completing the substrates fabrication we coated our samples with fibronectin(0.16 mg/ml) for better cells adhesion.
 \subsection{Cell seeding and cultivation}
 Cardiac cell isolation, seeding and cultivation performed according to Worthington protocol (http://www.worthingtonbiochem.com/$\newline$NCIS/default.html ). Cardiac cells were isolated from the ventricles of 1-3 day old neonatal Wistar rats. 
 \subsection{Staining}
@@ -26,5 +26,10 @@ One of the major goal of this study was cardiac determination of morphologically
 \subsubsection{Optical mapping data analysis}
 Recorded optical mapping videos were filtered using temporal 5 iteration 8-term Daubechies wavelet low-pass shrinkage filter and spatial smoothing three level Haar wavelet filter. Both filtering algorithms were implemented in Wolfram Mathematica software. After removing noise procedure we built pseudocardiograms for each of the two electrically isolated parts of the sample for subsequent comparison. 
 \subsubsection{Determination of average domain size in patterned cardiac monolayer}  
-To estimate size of orientated patterns on the $\alpha$-actin images of cell culture we used ImageJ software. Firstly, we calculated local orientation maps for each gray-scale $\alpha$-actin image using OrientationJ plugin thoroughly described in\cite{Bouten2011}. These program calculates local orientation tensor for each pixel of gray-scale image. Taking into account the fact, that averige cardiac cell has an elongated shape and can be considered as single unit with actin filaments orientated in one direction, we chose the size of square window being equal to relative size of cell at image in pixel units. Also, this assumption is a crucial point to the proper estimation of local directionality at the image because the square window size directly influences on the calculation of inner products of gradient functions. Hence it directly affects the determination of orientation tensor components and directionality. In other words the square size parameter represents the measure of influence of neighbourhood pixels on the results.    As a result we achieved gray-scale image each pixel of which had the value of angle of local directionality at the corresponding pixel of source image.       
-Then we implemented basic maching learning k-means algorithms in 
+\paragraph{local angles calculation}
+To estimate size of orientated patterns on the $\alpha$-actin images of cell culture we used ImageJ software. Firstly, we calculated local orientation maps for each gray-scale $\alpha$-actin image using OrientationJ plugin thoroughly described in\cite{Bouten2011}. These program calculates local orientation tensor for each pixel of gray-scale image. Taking into account the fact, that averige cardiac cell has an elongated shape and can be considered as single unit with actin filaments orientated in one direction, we chose the size of square window being equal to relative size of cell at image in pixel units. Also, this assumption is a crucial point to the proper estimation of local directionality at the image because the square window size directly influences on the calculation of inner products of gradient functions. Hence it directly affects the determination of orientation tensor components and directionality. In other words the square size parameter represents the measure of influence of neighbourhood pixels on the results.    As a result we achieved gray-scale image each pixel of which had the value of angle of local directionality at the corresponding pixel of source image. The angle values were in the range of 0 to $\pi$.      
+\paragraph{clusterization of angular images}
+Then we implemented basic maching learning k-means algorithms to clusterize angular distribution images. To achieve this we might use usual approach to transform our angle values to Cartesian coordiantes using following simple formulas:
+$x=\cos(\alpha)$;$y=\sin(\alpha)$, and apply k-means clustering to these (x,y) points. Unfortunately, this approach doesn't work for our purpose due to the fact that it doesn't consider $\pi$-periodicity of orientation of angular distribution. In order to overcome this difficulty we slightly modified the transform to Cartesian coordinates: $x=\cos(2\alpha)$;$y=\sin(2\alpha)$. This simple modification of transform gives us ability to work in cycled coordinates, where ,for instance, 1 degree angle points and 179 degree angle points are pretty close but using the previous approach they are far away.     
+\paragraph{determination of cluster's average size}
+We used Local Thickness ImageJ plugin (http://www.optinav.com/Local\_Thickness.htm) for quantifying average size of clusters on the angular images after the application of  our modified k-means algorithm. This plugin outputs image each pixel of which has value of corresponding morphological feature of thresholded image. We built a  histogram of resulting image and detected positions (value of local thickness in pixels) of highest peaks on it. Then we averaged the values of these peaks over the specimen and got the size orientation domain.  
