--- a/03-methods.tex
+++ b/03-methods.tex
@@ -6,30 +6,65 @@
 	\label{sec:specimen_preparation_electrospinning}
 
 
-PCL(polycaprolactone, Sigma 65,000 MW) was dissolved in hexafluorisopropanol at 5\%concentration.  
-Polydimethylsiloxane (PDMS) was prepared by the thorough mixing of two liquid components (purchased from Dow Corning Toray Corp., Japan) at a ratio of 1:10 in a flat Petri dish. After being kept at 80\gc\space for 1 hour, the polymerized PDMS layer was separated from the dish, cut into 15x15 mm squares.
+PCL(polycaprolactone, Sigma 65,000 MW) was dissolved in hexafluorisopropanol at 5\% concentration.  
+Polydimethylsiloxane (PDMS) was prepared by thorough mixing of two liquid components (purchased from Dow Corning Toray Corp., Japan) at a ratio of 1:10 in a flat Petri dish.
+ After being kept at 80\gc\space for 1 hour, the polymerized PDMS layer was separated from the dish, cut into 15x15 mm squares.
 
 All chemicals were purchased from Wako Chemicals Inc.,Japan.
 \subsubsection{Electrospinning of PCL fibers}
-The prepared solution of PCL polymer was electrospun using Nanon electrospinning setup(MECC CO.,LTD) with applying of 8kV between needle and grounded collector. The solution was ejected through 20 gauge blut-tip needle at feed rate of 1 ml/h. Forming fibers were deposited directly during the process of electrospining on either PDMS sheets or 22mm diameter cover glass pieces(Corning Corp.), which were placed on the surface of grounded stationary collector, representing a huge metal plate.    
+The prepared solution of PCL polymer was electrospun using Nanon electrospinning setup (MECC CO.,LTD) with applying of 8kV between needle and grounded collector.
+ The solution was ejected through 20 gauge blut-tip needle at feed rate of 1 ml/h. 
+ Forming fibers were deposited directly during the process of electrospining on either PDMS sheets or 22mm diameter cover glass pieces(Corning Corp.), which were placed on the surface of grounded stationary collector, representing a huge metal plate.    
 \subsubsection{Creating of randomly oriented nanofibrous substrates}
-In order to obtain samples of different nanofibers positioning density we varied spraying time in the range of 10 to 60 seconds. Thus, we produced 2-D fibrous meshes with pore size of 5-500 um. 
-It was important for our study to make control specimens, which were not covered by polymer fibers. On  the other hand we had to compare fuctional and morphological characteristics of this substrates. To fulfill all the requirements we produced sample half covered with fibrous mesh. For this purpose we gently removed nanofibers from the half of the specimen using adhesive tape. After completing the substrates fabrication we coated our samples with fibronectin(0.16 mg/ml) for better cells adhesion.
+In order to obtain samples of different nanofibers positioning density we varied spraying time in the range from 10 to 60 seconds.
+Thus, we produced 2-D fibrous meshes with pore size of 5-500 um. 
+It was important for our study to make control specimens, which were not covered by polymer fibers.
+On the other hand we had to compare functional and morphological characteristics of these substrates..
+To fulfill all the requirements we produced sample half covered with fibrous mesh.
+For this purpose we gently removed nanofibers from the half of the specimen using adhesive tape.
+After completing of the substrates fabrication we coated our samples with fibronectin (0.16 mg/ml) for better cells adhesion.
 \subsection{Cell seeding and cultivation}
-Cardiac cell isolation, seeding and cultivation performed according to Worthington protocol (http://www.worthingtonbiochem.com/$\newline$NCIS/default.html ). Cardiac cells were isolated from the ventricles of 1-3 day old neonatal Wistar rats. 
+Cardiac cell isolation, seeding and cultivation performed according to Worthington protocol (http://www.worthingtonbiochem.com/$\newline$NCIS/default.html ).
+Cardiac cells were isolated from the ventricles of 1-3 day old neonatal Wistar rats. 
 \subsection{Staining}
 \subsubsection{Optical mapping}
-Optical mapping was done after 4-5 days of cell culture cultivation. In order to monitor activity and detection of excitation wave propagation, the cells were loaded with Ca$^{2+}$ Fluo-4-AM indicator(Invitogen, USA) in Tyrode solution for 40 minutes. After completion of staining procedure we exchanged the Tyrode solution to the fresh one. For the capturing of excitation cardiac waves we utilized Olympus MVX-10 Macro-View fluorescent microscope equipped with high-speed Andor EM-CCD Camera 897-U. Videos were acquired at 68 fps. Before cardiac activity recording covered with nanofibers and non-covered halves of the sample separated from each other by sharp blade cut. In terms of electrical conductivity of excitable tissue these two parts of the specimen didn't have any interactions. To compare the conduction properties of resulting two sections we mounted stimulation electrode(500mm platinum wire) at the cutting-line area 0.5 mm above the surface with a round shape platinum wire ground electrode. As a result, these two separated areas were simultaneously(synchronously) stimulated.
+Optical mapping was done after 4-5 days of cell culture cultivation.
+In order to monitor activity and detection of excitation wave propagation, the cells were loaded with Ca$^{2+}$ Fluo-4-AM indicator (Invitogen, USA) in Tyrode solution for 40 minutes.
+After completion of staining procedure we exchanged the Tyrode solution to the fresh one.
+FFor the capturing of excitation cardiac waves we utilized Olympus MVX-10 Macro-View fluorescent microscope equipped with high-speed Andor EM-CCD Camera 897-U.
+Videos were acquired at 68 fps.
+Before cardiac activity recording, covered with nanofibers and non-covered halves of the sample were separated from each other by sharp blade cut.
+Therefore, these two parts of the specimen didn’t interact in terms of electrical conductivity.
+To compare the conduction properties of two resulting sections, we mounted stimulation electrode (500mm platinum wire) at the cutting-line area 0.5 mm above the surface with a round shape platinum wire ground electrode.
+As a result, these two separated areas were simultaneously (synchronously) stimulated at different frequences.
 \subsubsection{$\alpha$-actin staining}
-One of the major goal of this study was cardiac determination of morphologically orientated patterns at influenced by nanofibres cell culture. For this purpose we stained our samples with Alexa Fluor 488 Phaloidinin Conjugate according to the descibed protocol\cite{Orlova2011}. The sampled were imaged using Carl Zeiss LSM 710 confocal microscope. 
+One of the major goal of this study was determination of morphologically orientated patterns at influenced by nanofibers cardiac cell culture.
+For this purpose we stained our samples with Alexa Fluor 488 Phaloidinin Conjugate according to the described protocol\cite{Orlova2011}.
+The samples were imaged using Carl Zeiss LSM 710 confocal microscope. 
 \subsection{Data Analysis}
 \subsubsection{Optical mapping data analysis}
-Recorded optical mapping videos were filtered using temporal 5 iteration 8-term Daubechies wavelet low-pass shrinkage filter and spatial smoothing three level Haar wavelet filter. Both filtering algorithms were implemented in Wolfram Mathematica software. After removing noise procedure we built pseudocardiograms for each of the two electrically isolated parts of the sample for subsequent comparison. 
+Recorded optical mapping videos were filtered using temporal 5 iteration 8-term Daubechies wavelet low-pass shrinkage filter and spatial smoothing three level Haar wavelet filter.
+Both filtering algorithms were implemented using Wolfram Mathematica software environment.
+After noise removing procedure we built pseudocardiograms for each of the two electrically isolated parts of the sample for subsequent comparison. 
 \subsubsection{Determination of average domain size in patterned cardiac monolayer}  
 \paragraph{local angles calculation}
-To estimate size of orientated patterns on the $\alpha$-actin images of cell culture we used ImageJ software. Firstly, we calculated local orientation maps for each gray-scale $\alpha$-actin image using OrientationJ plugin thoroughly described in\cite{Bouten2011}. These program calculates local orientation tensor for each pixel of gray-scale image. Taking into account the fact, that averige cardiac cell has an elongated shape and can be considered as single unit with actin filaments orientated in one direction, we chose the size of square window being equal to relative size of cell at image in pixel units. Also, this assumption is a crucial point to the proper estimation of local directionality at the image because the square window size directly influences on the calculation of inner products of gradient functions. Hence it directly affects the determination of orientation tensor components and directionality. In other words the square size parameter represents the measure of influence of neighbourhood pixels on the results.    As a result we achieved gray-scale image each pixel of which had the value of angle of local directionality at the corresponding pixel of source image. The angle values were in the range of 0 to $\pi$.      
+To estimate the size of orientated patterns on the $\alpha$-actin images of cell culture we used ImageJ software.
+At the beginning we calculated local orientation maps for each gray-scale $\alpha$-actin image using OrientationJ plugin thoroughly described in \cite{Bouten2011}.
+This program calculates local orientation tensor for each pixel of gray-scale image.
+Taking into account the fact, that average cardiac cell is elongated and can be considered as single unit with actin filaments orientated in one direction, we chose the size of square window being equal to relative size of cell at image in pixel units.
+Also, this assumption is a crucial point to the proper estimation of local directionality at the image because the square window size directly influences on the calculation of inner products of gradient functions.
+Hence it directly affects the determination of orientation tensor components and directionality.
+In other words the square size parameter represents the measure of influence of neighbourhood pixels on the results.
+As a result we have achieved gray-scale image each pixel of which had the value of angle of local directionality at the corresponding pixel of source image.
+The angle values were in the range from 0 to $\pi$.      
 \paragraph{clusterization of angular images}
-Then we implemented basic maching learning k-means algorithms to clusterize angular distribution images. To achieve this we might use usual approach to transform our angle values to Cartesian coordiantes using following simple formulas:
-$x=\cos(\alpha)$;$y=\sin(\alpha)$, and apply k-means clustering to these (x,y) points. Unfortunately, this approach doesn't work for our purpose due to the fact that it doesn't consider $\pi$-periodicity of orientation of angular distribution. In order to overcome this difficulty we slightly modified the transform to Cartesian coordinates: $x=\cos(2\alpha)$;$y=\sin(2\alpha)$. This simple modification of transform gives us ability to work in cycled coordinates, where ,for instance, 1 degree angle points and 179 degree angle points are pretty close but using the previous approach they are far away.     
+Then we implemented basic maching learning k-means algorithms to clusterize angular distribution images.
+To achieve this we might use common approach to transform our angle values to Cartesian coordiantes using following simple formulas:$x=\cos(\alpha)$;$y=\sin(\alpha)$, and and apply k-means clustering to these (x,y) points.
+Unfortunately, this approach doesn't work for our purpose due to the fact that it doesn't consider $\pi$-periodicity of angular distribution orientation.
+In order to overcome this difficulty we slightly modified the transformation rules to Cartesian coordinates: $x=\cos(2\alpha)$;$y=\sin(2\alpha)$.
+This simple modification of transformation rules  gives us ability to work in cycled coordinates, where, for instance, 1 degree angle points and 179 degree angle points are pretty close but using the previous approach they are far away.     
 \paragraph{determination of cluster's average size}
-We used Local Thickness ImageJ plugin (http://www.optinav.com/Local\_Thickness.htm) for quantifying average size of clusters on the angular images after the application of  our modified k-means algorithm. This plugin outputs image each pixel of which has value of corresponding morphological feature of thresholded image. We built a  histogram of resulting image and detected positions (value of local thickness in pixels) of highest peaks on it. Then we averaged the values of these peaks over the specimen and got the size orientation domain.  
+We used Local Thickness ImageJ plugin (http://www.optinav.com/Local\_Thickness.htm) for quantifying average size of clusters on the angular images after the application of our modified k-means algorithm.
+This plugin outputs image each pixel of which has value of corresponding morphological feature of thresholded image.
+We built a  histogram of resulting image and detected positions (values of local thickness in pixels) of highest peaks on it.
+Then we averaged the values of these peaks over the specimen and got the size of orientation domain.  
