--- a/03-methods.tex
+++ b/03-methods.tex
@@ -14,7 +14,7 @@ All chemicals were purchased from Wako Chemicals Inc.,Japan.
 \subsubsection{Electrospinning of PCL fibers}
 The prepared solution of PCL polymer was electrospun using Nanon electrospinning setup (MECC CO.,LTD) with applying of 8kV between needle and grounded collector.
  The solution was ejected through 20 gauge blut-tip needle at feed rate of 1 ml/h. 
- Forming fibers were deposited directly during the process of electrospining on either PDMS sheets or 22mm diameter cover glass pieces(Corning Corp.), which were placed on the surface of grounded stationary collector, representing a huge metal plate.    
+ Forming fibers were deposited directly during the process of electrospining on either PDMS sheets or 22mm diameter cover glass pieces(Corning Corp.), which were placed on the surface of grounded stationary collector, constituting a huge metal plate.    
 \subsubsection{Creating of randomly oriented nanofibrous substrates}
 In order to obtain samples of different nanofibers positioning density we varied spraying time in the range from 10 to 60 seconds.
 Thus, we produced 2-D fibrous meshes with pore size of 5-500 um. 
