--- a/03-methods.tex
+++ b/03-methods.tex
@@ -12,11 +12,11 @@ Polydimethylsiloxane (PDMS) was prepared by thorough mixing of two liquid compon
 
 All chemicals were purchased from Wako Chemicals Inc.,Japan.
 \subsubsection{Electrospinning of PCL fibers}
-The prepared solution of PCL polymer was electrospun using Nanon electrospinning setup (MECC CO.,LTD) with applying of 8kV between needle and grounded collector.
+The prepared solution of PCL polymer was electrospun using Nanon electrospinning setup (MECC CO.,LTD) with 8 kV applied voltage between needle and grounded collector.
  The solution was ejected through 20 gauge blut-tip needle at feed rate of 1 ml/h. 
  Forming fibers were deposited directly during the process of electrospining on either PDMS sheets or 22mm diameter cover glass pieces(Corning Corp.), which were placed on the surface of grounded stationary collector, constituting a huge metal plate.    
 \subsubsection{Creating of randomly oriented nanofibrous substrates}
-In order to obtain samples of different nanofibers positioning density we varied spraying time in the range from 10 to 60 seconds.
+In order to obtain samples of different nanofibers mesh density we varied spraying time in the range from 10 to 60 seconds.
 Thus, we produced 2-D fibrous meshes with pore size of 5-500 um. 
 It was important for our study to make control specimens, which were not covered by polymer fibers.
 On the other hand we had to compare functional and morphological characteristics of these substrates..
@@ -35,7 +35,7 @@ FFor the capturing of excitation cardiac waves we utilized Olympus MVX-10 Macro-
 Videos were acquired at 68 fps.
 Before cardiac activity recording, covered with nanofibers and non-covered halves of the sample were separated from each other by sharp blade cut.
 Therefore, these two parts of the specimen didn’t interact in terms of electrical conductivity.
-To compare the conduction properties of two resulting sections, we mounted stimulation electrode (500mm platinum wire) at the cutting-line area 0.5 mm above the surface with a round shape platinum wire ground electrode.
+To compare the conduction properties of two resulting sections, we mounted stimulation electrode (500mm platinum wire) at the cutting-line area 0.5 mm above the surface.
 As a result, these two separated areas were simultaneously (synchronously) stimulated at different frequences.
 \subsubsection{$\alpha$-actin staining}
 One of the major goal of this study was determination of morphologically orientated patterns at influenced by nanofibers cardiac cell culture.
@@ -67,4 +67,4 @@ This simple modification of transformation rules  gives us ability to work in cy
 We used Local Thickness ImageJ plugin (http://www.optinav.com/Local\_Thickness.htm) for quantifying average size of clusters on the angular images after the application of our modified k-means algorithm.
 This plugin outputs image consisting of pixels with values of corresponding morphological features of thresholded source image.
 We built a  histogram of resulting image and detected positions (values of local thickness in pixels) of highest peaks on it.
-Then we averaged the= values of these peaks over the specimen and got the size of orientation domain.  
+Then we averaged the values of these peaks over the specimen and got the size of orientation domain.  
